introdcao html synapse

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ body{
     background-color: rgb(14, 121, 14)
 }    
 </style>
-    <h1>Te amo minha loira</h1>
-    <h1>Feliz dia da mulher</h1>
+    <h1>Olá mundo</h1>
+    <h1>Sejam bem-vindos ao synapse</h1>
 
 </body>
 </html>
